@@ -30,12 +30,85 @@ ERR_LDAP = 2
 
 class LdapPasswdEngine(passwd.BaseSyncPasswdEngine):
 
+  # TODO: suppress unnecessary ldap bind
+  ldap_user = None
+
+  def hasResetPasswdCapability(self):
+
+    return True
+
   def _prepare(self, config):
     # This is for standalone use.
     self.ldap_uri = config.get('apps.ldap_uri')
     self.ldap_basedn = config.get('apps.ldap_basedn')
     self.ldap_filter = config.get('apps.ldap_filter')
+    self.ldap_rootdn = config.get('apps.ldap_rootdn')
+    self.ldap_rootpw = config.get('apps.ldap_rootpw')
+    self.ldap_passwd_hash_style = config.get('apps.ldap_passwd_hash_style')
 
+  def _checkLocalUser(self, user_name):
+    ldapHandle = None
+    try:
+      ldapHandle = ldap.initialize(self.ldap_uri)
+      ldapHandle.simple_bind_s(who=self.ldap_rootdn, cred=self.ldap_rootpw)
+      self.ldap_user = ldapHandle.search_s(
+        self.ldap_basedn,
+        ldap.SCOPE_SUBTREE,
+        self.ldap_filter % utils.ldapEscape(user_name))
+      if len(self.ldap_user) != 1:
+        try:
+          ldapHandle.unbind_s()
+        except:
+          pass
+        del(self.ldap_user)
+        raise passwd.PasswdException("ldap search result count is not 1.",
+                                     ERR_LDAP)
+    except Exception, e:
+      if ldapHandle is not None:
+        try:
+          ldapHandle.unbind_s()
+        except:
+          pass
+      raise passwd.PasswdException(e,ERR_LDAP)
+    ldapHandle.unbind_s()
+    return True
+
+  def _resetLocalPassword(self, user_name, new_password):
+    hashed_pass = utils.hashPassword(new_password, self.ldap_passwd_hash_style)
+    ldapHandle = None
+    try:
+      ldapHandle = ldap.initialize(self.ldap_uri)
+      ldapHandle.simple_bind_s(who=self.ldap_rootdn, cred=self.ldap_rootpw)
+      ldapHandle.modify_s(self.ldap_user[0][0],
+                          [(ldap.MOD_REPLACE, "userPassword", hashed_pass)])
+    except Exception, e:
+      if ldapHandle is not None:
+        try:
+          ldapHandle.unbind_s()
+        except:
+          pass
+      raise passwd.PasswdException(e,ERR_LDAP)
+    ldapHandle.unbind_s()
+    return True
+
+  def _revertLocalPassword(self, user_name):
+
+    old_pass = self.ldap_user[0][1]['userPassword'][0]
+    try:
+      ldapHandle = ldap.initialize(self.ldap_uri)
+      ldapHandle.simple_bind_s(who=self.ldap_rootdn, cred=self.ldap_rootpw)
+      ldapHandle.modify_s(self.ldap_user[0][0],
+                          [(ldap.MOD_REPLACE, "userPassword", old_pass)])
+    except Exception, e:
+      if ldapHandle is not None:
+        try:
+          ldapHandle.unbind_s()
+        except:
+          pass
+      raise passwd.PasswdException(e,ERR_LDAP)
+    ldapHandle.unbind_s()
+    return True
+    
   def _changeLocalPassword(self, user_name, old_password, new_password):
     ldapHandle = None
     try:
